--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Roboto|Courgette|Pacifico:400,700" rel="stylesheet">
 	<title>P2P Chat</title>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 	<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap.min.css')}}">
 	<style type="text/css">
 		body {
@@ -103,6 +104,21 @@
 		.signup-form a:hover {
 			text-decoration: underline;
 		}
+
+		#name1-form,
+		#password-form,
+		#confirm-password-form {
+			display: flex;
+			justify-content: space-between;
+		}
+
+		.greenicon {
+			color: green;
+		}
+
+		.redicon {
+			color: red;
+		}
 	</style>
 
 </head>
@@ -126,7 +142,9 @@
 			</div>
 			<div class="form-group">
 				<label>Username</label>
-				<input type="text" class="form-control" name="name" id="name" required="required">
+				<div id="name1-form">
+					<input type="text" class="form-control" name="name" id="name" required="required">
+				</div>
 			</div>
 			<div class="form-group">
 				<label>Password</label>
@@ -135,11 +153,13 @@
 			</div>
 			<div class="form-group">
 				<label>Confirm Password</label>
-				<input type="password" class="form-control" name="confirm_password" id="confirm_password"
-					required="required">
+				<div id="confirm-password-form">
+					<input type="password" class="form-control" name="confirm_password" id="confirm-password"
+						required="required">
+				</div>
 			</div>
 			<div class="form-group">
-				<button type="submit" class="btn btn-primary btn-block btn-lg">Sign Up</button>
+				<button type="submit" id="submit" class="btn btn-primary btn-block btn-lg">Sign Up</button>
 			</div>
 		</form>
 		<div class="text-center small">Already have an account? <a href="signinPage">Login here</a></div>
@@ -148,12 +168,46 @@
 	<script>
 		$(document).ready(function () {
 			$('#name').keyup(function () {
+				var html = "";
 				$.ajax({
 					dataType: 'text',
 					url: "/checkname?name=" + $('#name').val(),
-
+					success: function (data) {
+						console.log(data)
+						if (data == 'False') {
+							$('#name1-form i').remove();
+							html = "<i class=\"far fa-check-circle fa-2x greenicon\"></i>"
+							$('#name1-form').append(html);
+							document.getElementById('submit').disabled = false;
+						}
+						else {
+							$('#name1-form i').remove();
+							html = "<i class=\"fas fa-ban fa-2x redicon\"></i>"
+							$('#name1-form').append(html);
+							document.getElementById('submit').disabled = true
+						}
+					}
 				});
 			})
+			$('#confirm-password,#password').keyup(function () {
+				var password = $('#password').val();
+				var confirm_password = $('#confirm-password').val();
+				var html = "";
+				if (confirm_password != "") {
+					if (password != confirm_password) {
+						$('#confirm-password-form i').remove();
+						html = "<i class=\"fas fa-ban fa-2x redicon\"></i>"
+						$('#confirm-password-form').append(html);
+						document.getElementById('submit').disabled = true;
+					}
+					else {
+						$('#confirm-password-form i').remove();
+						html = "<i class=\"far fa-check-circle fa-2x greenicon\"></i>"
+						$('#confirm-password-form').append(html);
+						document.getElementById('submit').disabled = false;
+					}
+				}
+			});
 		});
 	</script>
 </body>
